src/base/bootstrap-overrides/_base.scss
/* ... */
@supports (text-decoration: underline dotted) {
	abbr[title] {
		border-bottom: 0;
		text-decoration: underline dotted;
		//Next line ported from Bootstrap 4
		text-decoration-skip-ink: none; // sass-lint:disable-line no-misspelled-properties
	}
}

/*
 *	Override the design of alerts and labels
 */

%label-alert-common {
	border-radius: 0;
	border-style: solid;
	border-width: 0 0 0 4px;
}

.alert {
	@extend %label-alert-common;

	> {
		:first-child {
			margin-left: 1.2em;
			margin-top: auto;

			&:before {
				display: inline-block;
				font-family: "Glyphicons Halflings";
				margin-left: -1.3em;
				position: absolute;
			}
		}

		strong,
		em,
		span {
			&:first-child {
				display: inline-block;
			}
		}
	}
}

%label-alert-color-000 {
	color: #000;
}

%label-alert-underline {
	text-decoration: underline;
}

.label {
	@extend %label-alert-common;
}

%label-default-bg-border-left {
	background: #eee;
	border-color: #acacac;
}

.label-default {
	@extend %label-default-bg-border-left;
	@extend %label-alert-color-000;

	&[href] {
		&:hover,
		&:focus,
		&:active {
			@extend %label-default-bg-border-left;
			@extend %label-alert-color-000;
			@extend %label-alert-underline;
		}
	}
}

%label-primary-bg-border-left {
	background: #e8f2f4;
	border-color: #083c6c;
}

.label-primary {
	@extend %label-primary-bg-border-left;
	@extend %label-alert-color-000;

	&[href] {
		&:hover,
		&:focus,
		&:active {
			@extend %label-primary-bg-border-left;
			@extend %label-alert-color-000;
			@extend %label-alert-underline;
		}
	}
}

$label-alert-success-border-icon-color: #278400;

%label-alert-success-bg-border-left {
	background: #d8eeca;
	border-color: $label-alert-success-border-icon-color;
}

.label-success {
	@extend %label-alert-success-bg-border-left;
	@extend %label-alert-color-000;

	&[href] {
		&:hover,
		&:focus,
		&:active {
			@extend %label-alert-success-bg-border-left;
			@extend %label-alert-color-000;
			@extend %label-alert-underline;
		}
	}
}

.alert-success {
	@extend %label-alert-success-bg-border-left;
	@extend %label-alert-color-000;

	> {
		:first-child {
			&:before {
				color: $label-alert-success-border-icon-color;
				content: "\e084";
			}
		}
	}
}

$label-alert-info-border-icon-color: #269abc;

%label-alert-info-bg-border-left {
	background: #d7faff;
	border-color: $label-alert-info-border-icon-color;
}

.label-info {
	@extend %label-alert-info-bg-border-left;
	@extend %label-alert-color-000;

	&[href] {
		&:hover,
		&:focus,
		&:active {
			@extend %label-alert-info-bg-border-left;
			@extend %label-alert-color-000;
			@extend %label-alert-underline;
		}
	}
}

.alert-info {
	@extend %label-alert-info-bg-border-left;
	@extend %label-alert-color-000;

	> {
		:first-child {
			&:before {
				color: $label-alert-info-border-icon-color;
				content: "\e086";
			}
		}
	}
}

$label-alert-warning-border-icon-color: #f90;

%label-alert-warning-bg-border-left {
	background: #f9f4d4;
	border-color: $label-alert-warning-border-icon-color;
}

.label-warning {
	@extend %label-alert-warning-bg-border-left;
	@extend %label-alert-color-000;

	&[href] {
		&:hover,
		&:focus,
		&:active {
			@extend %label-alert-warning-bg-border-left;
			@extend %label-alert-color-000;
			@extend %label-alert-underline;
		}
	}
}

.alert-warning {
	@extend %label-alert-warning-bg-border-left;
	@extend %label-alert-color-000;

	> {
		:first-child {
			&:before {
				color: $label-alert-warning-border-icon-color;
				content: "\e107";
			}
		}
	}
}

$label-alert-danger-border-icon-color: #d3080c;

%label-alert-danger-bg-border-left {
	background: #f3e9e8;
	border-color: $label-alert-danger-border-icon-color;
}

.label-danger {
	@extend %label-alert-danger-bg-border-left;
	@extend %label-alert-color-000;

	&[href] {
		&:hover,
		&:focus,
		&:active {
			@extend %label-alert-danger-bg-border-left;
			@extend %label-alert-color-000;
			@extend %label-alert-underline;
		}
	}
}

.alert-danger {
	@extend %label-alert-danger-bg-border-left;
	@extend %label-alert-color-000;

	> {
		:first-child {
			&:before {
				color: $label-alert-danger-border-icon-color;
				content: "\e101";
			}
		}
	}
}

/*
 *	Heading top margins
 */

%font-weight-700 {
	font-weight: 700;
}

%h1-h2-margin-top {
	margin-top: ceil($line-height-computed * $font-scale-xxl);
}

h1,
.h1 {
	@extend %font-weight-700;
	@extend %h1-h2-margin-top;
}

h2,
.h2 {
	@extend %font-weight-700;
	@extend %h1-h2-margin-top;
}

h3,
.h3 {
	@extend %font-weight-700;
	margin-top: ceil($line-height-computed * $font-scale-xl);
}

h4,
.h4 {
	@extend %font-weight-700;
	margin-top: ceil($line-height-computed * $font-scale-lg);
}

h5,
.h5 {
	@extend %font-weight-700;
	margin-top: $line-height-computed;
}

h6,
.h6 {
	@extend %font-weight-700;
	margin-top: ceil($line-height-computed * $font-scale-sm);
}

/*
 * Code
 */
code {
	white-space: normal;
}

/*
 * Adding space for definition list items
 */
dt {
	margin-bottom: 3px;
}

dd {
	margin-bottom: 15px;
}

/*
 *	Firefox-safe line height on input[type="reset|button|submit"]
 */
$input-height-xs: (floor($font-size-small * $line-height-small) + ($padding-xs-vertical * 2) + 2);

input {
	&[type="reset"],
	&[type="button"],
	&[type="submit"] {
		height: $input-height-base;

		&.btn-lg,
		&.input-lg {
			height: $input-height-large;
		}

		&.btn-sm,
		&.input-sm {
			height: $input-height-small;
		}

		&.btn-xs {
			height: $input-height-xs;
		}
	}
}

/*
 *	Blockquote font size
 */
blockquote {
	font-size: $font-size-base;
}

/*
 *	Form control width
 *
 *	Default should be representative of the expected length of input.
 *	Full width should be only for cases when the expected length of input is
 *	greater than the available width.
 *  height:37px; rule of Bootstrap was overwritten by height: auto; first
 *  then a min-height specified, in order to address the issue #8492. July 2019.
 */
input[type=button], input[type=reset], input[type=submit] {
	height: auto;
	min-height: 37px;
}
/* ... */

